@@ -22,7 +22,6 @@ ideas for future versions:
   [ ] inserting messages _and_ actors to sequence charts does not work because the actor gets a new lifeline
   [ ] while pressing the mouse button, the status bar shall not change size -> otherwise pressed element moves around
   @pencil
-  [ ] when selecting solutions of relationships, allow trespassing parents of from/to nodes without dept
   [ ] activity bars on lifelines missing
   [?] more relationship types needed: one-way x--> and no x--x dependency (non-navigateable ends)
   [?] more relationship types needed: one-way x--> and no x--x association (maybe x is a feature?)
